--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
             "Core\\HttpClient\\": "src"
         }
     },
+    "provide": {
+        "psr/http-client-implementation": "1.0"
+    },
     "require": {
         "php": ">=8.1",
         "psr/http-client": "*",
